[doc]增加延迟脚本和异步脚本对比

--- a/JavaScript/延迟脚本和异步脚本.md
+++ b/JavaScript/延迟脚本和异步脚本.md
@@ -44,6 +44,14 @@ script标签具有两个很少用到的属性`defer`和`async`，分别表示延
 
 多个异步脚本之间由于加载顺序不确定所以也不要相互存在依赖关系
 
+下面是[ES6标准入门-阮一峰](http://es6.ruanyifeng.com/#docs/module-loader#浏览器加载)中模块部分对延迟脚本的说明
+
+>`<script>`标签打开defer或async属性，脚本就会异步加载。渲染引擎遇到这一行命令，就会开始下载外部脚本，但不会等它下载和执行，而是直接执行后面的命令。
+
+>defer与async的区别是：前者要等到整个页面正常渲染结束，才会执行；后者一旦下载完，渲染引擎就会中断渲染，执行这个脚本以后，再继续渲染。一句话，defer是“渲染完
+再执行”，async是“下载完就执行”。另外，如果有多个defer脚本，会按照它们在页面出现的顺序加载，而多个async脚本是不能保证加载顺序的。
+
 
 参考资料
 - 《JavaScript高级程序设计》（第三版）
+- 《ES6标准入门》
