[doc]更新英语笔记

--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -7,3 +7,22 @@ Don't put words in my mouth. 我没说过这些。
 2. word of mouth 口碑
 
 3. by word of mouth 口头地
+
+4. wind up 最终沦落到
+
+I hurt myself and I wound up in the hospital.
+
+5. put up 放置；储备；提供食宿；举起
+
+She will put me up for a few days. 她让我留宿几天
+
+6. wash up 洗掉，冲刷掉（餐具），引申为毁掉
+
+Problems like this have washed up quite a few careers.
+
+7. government mouthpiece 政府的喉舌
+
+mouthpiece 代言人，发言人
+
+8. take the words right out of one's mouth  说出某人想说的话，不谋而合
+
