--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -26,3 +26,14 @@ mouthpiece 代言人，发言人
 
 8. take the words right out of one's mouth  说出某人想说的话，不谋而合
 
+9. leave a bad taste in one's mouth 给某人留下坏印象
+
+10. have one's heart in one's mouth 提心吊胆
+
+11. turn in 交还，上交
+
+12. at the mercy of 任...摆布
+
+13. by now 至此，到如今，现在
+
+14. be accustomed to doing 习惯于
