--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -37,3 +37,9 @@ mouthpiece 代言人，发言人
 13. by now 至此，到如今，现在
 
 14. be accustomed to doing 习惯于
+
+15. be born with a silver spoon in one's mouth 含着金钥匙出生
+
+16. live from hand to mouth 糊口度日，仅以糊口，朝夕难保，度日维艰
+
+17. withhold...from 使...不让...，阻止
