--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -47,3 +47,7 @@ mouthpiece 代言人，发言人
 18. mouth off 顶嘴
 
 19. carry a chip on one's shoulder 愤愤不平，寻衅吵架，叫板
+
+20. come off 实现，成为，举行
+
+21. In our society we find men of integrity along with crooks. 我们的社会良莠不齐
