--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -51,3 +51,7 @@ mouthpiece 代言人，发言人
 20. come off 实现，成为，举行
 
 21. In our society we find men of integrity along with crooks. 我们的社会良莠不齐
+
+22. burst into laughter 哄堂大笑
+
+23. hit it off 投缘，一见如故
