--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -55,3 +55,7 @@ mouthpiece 代言人，发言人
 22. burst into laughter 哄堂大笑
 
 23. hit it off 投缘，一见如故
+
+24. be suspected of wrongdoing 涉嫌不法行为
+
+25. Let the chips fall where they may 是一个非常有用的习惯用语。你这样说也就是告诉别人你已经决定采取行动，不管其后果如何
