--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -61,3 +61,5 @@ mouthpiece 代言人，发言人
 25. Let the chips fall where they may 是一个非常有用的习惯用语。你这样说也就是告诉别人你已经决定采取行动，不管其后果如何
 
 26. cash in chips 把筹码兑换成钱
+
+27. bring into action 投入使用(使于始工作,投入战斗)
