--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -63,3 +63,11 @@ mouthpiece 代言人，发言人
 26. cash in chips 把筹码兑换成钱
 
 27. bring into action 投入使用(使于始工作,投入战斗)
+
+28. weed out 剔除
+
+29. cross off 划掉
+
+30. on a large scale 大规模地
+
+31. long since forgotten 早已被遗忘
