--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -73,3 +73,11 @@ mouthpiece 代言人，发言人
 31. long since forgotten 早已被遗忘
 
 32. come close to doing 差点儿做
+
+33. under no circumstances 决不，无论如何都不
+
+34. put into practice 实行(实施)
+
+35. in comparison with 比较(同...比较起来,与-比较)
+
+36. stand up to 经受(经得住,对抗)
