--- a/English/Daily Expressions/From 2017.12.31.md
+++ b/English/Daily Expressions/From 2017.12.31.md
@@ -83,3 +83,9 @@ mouthpiece 代言人，发言人
 36. stand up to 经受(经得住,对抗)
 
 37. take the rap 承担刑事责任，背黑锅
+
+39. reconcile to 甘心, 接受
+
+40. bum rap 不公正的惩罚
+
+41. be framed 遭到陷害
