doc: add some git notes

--- a/Git/日常使用-分支操作.md
+++ b/Git/日常使用-分支操作.md
@@ -36,6 +36,7 @@ git branch -D <branch-name>
 
 # 删除远程分支
 git push origin :<branch-name>
+git push origin --delete <branch-name>
 
 # 如果删除了远程分支，而在另一台机器上没有同步信息可以执行
 git fetch -p
