--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -11,7 +11,7 @@ git init
 git add <file>
 git add <file> <file>
 
-# 添加所有文件修改记录到暂存区
+# 添加所有工作区的文件修改记录到暂存区
 git add .
 
 # 将当前暂存区的修改提交到本地仓库
@@ -27,6 +27,12 @@ git commit --amend
 git commit --amend -m 'message'
 # 如果可以重写，且本地仓库与远程仓库保持一致，那么可以强制 push 重写远程仓的历史
 git push -f
+
+# 放弃工作区指定文件的修改
+git checkout <file-name/path>
+
+# 放弃工作区全部文件修改
+git checkout .
 
 # 查看当前关联远程仓库信息
 git remote -v
