--- a/Git/日常使用-分支操作.md
+++ b/Git/日常使用-分支操作.md
@@ -41,4 +41,6 @@ git push origin --delete <branch-name>
 # 如果删除了远程分支，而在另一台机器上没有同步信息可以执行
 git fetch -p
 
+# 重命名本地分支
+git branch -m <new-branch-name>
 ```
