doc: add four git status check commands

--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -6,6 +6,18 @@
 # 本地初始化一个 Git 仓库
 git init
 
+# 查看本地仓库状态
+git status
+
+# 列出所有 tracked 的文件
+git ls-files -t
+
+# 列出所有 untracked 的文件
+git ls-files --others
+
+# 列出所有忽略的文件
+git ls-files --others -i --exclude-standard
+
 # 添加指定文件修改记录到暂存区
 # 这个 file 可以是一个文件的完整路径，也可以是某个目录的路径，如果是目录，则添加目录下的所有文件
 git add <file>
