doc: 3 commands about <git diff>

--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -18,6 +18,15 @@ git ls-files --others
 # 列出所有忽略的文件
 git ls-files --others -i --exclude-standard
 
+# 展示工作区和暂存区的差异 (add 操作之前))
+git diff
+
+# 展示暂存区和最近版本的差异 (add 操作之后 commit 之前)
+git diff --cached
+
+# 展示工作区+暂存区两者和最近版本的差异 (只要跟踪的文件有变化就会展示不同))
+git diff HEAD
+
 # 添加指定文件修改记录到暂存区
 # 这个 file 可以是一个文件的完整路径，也可以是某个目录的路径，如果是目录，则添加目录下的所有文件
 git add <file>
