--- a/Git/日常使用-分支操作.md
+++ b/Git/日常使用-分支操作.md
@@ -16,6 +16,9 @@ git branch --set-upstream <branch-name> <origin/branch-name>
 # 查看当前本地分支
 git branch
 
+# 查看所有远程分支
+git branch -r
+
 # 查看当前所有分支(本地和远程) all
 git branch -a
 
