doc: add the doc of egg-bin

--- a/Node-Egg/基础项目搭建.md
+++ b/Node-Egg/基础项目搭建.md
@@ -72,6 +72,8 @@ module.exports = appInfo => {
 
 通过 `egg-bin dev` 就可以让这个最简单的项目在本地跑起来了。
 
+更多关于 `egg-bin` 的使用可以参考该项目仓库的[文档](https://github.com/eggjs/egg-bin)
+
 ```json
 "scripts": {
   "dev": "egg-bin dev"
