doc: a desc for controller codes

--- a/Node-Egg/基础项目搭建.md
+++ b/Node-Egg/基础项目搭建.md
@@ -32,6 +32,8 @@ project folder
 
 ### 控制器
 
+控制的写法大同小异，个人偏向下面这样。
+
 ```js
 class HomeController extends require('egg').Controller {
   async index() {
