doc: open and close

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -1,2 +1,29 @@
 # 快捷操作备忘
 
+本笔记基于 VS Code for macOS，是自己日常使用中常用的一些操作，绝非全部。先放上官方的 [Keyboard Shortcuts for macOS](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf) 以便查询。
+
+`command + k + s` 也可以在编辑器内调出快捷键查询。
+
+```bash
+# 快速打开文件
+command + p
+
+# 调出命令工具
+command + shift + p
+
+# 关闭当前标签 / 关闭当前窗口
+command + w
+
+# 新建标签
+command + n
+
+# 新开窗口
+command + shift + n
+
+```
+
+#### 在终端里快速打开 VSC
+
+调出命令模式，输入 `code` 选择 `Shell Command: Install 'code' command in PATH` 注册 code 命令到环境变量（ Insiders 版本对应 `code-insiders`）。
+
+然后就可以在终端用 `code PATH` 命令来打开 VSC 了，例如在终端当前路径下打开 VSC: `code .`。
