doc: add a close window shortcut

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -13,7 +13,10 @@ command + p
 # 调出命令工具
 command + shift + p
 
-# 关闭当前标签 / 关闭当前窗口
+# 关闭当前窗口
+command + shift + n
+
+# 关闭当前标签 / 无标签则关闭当前窗口
 command + w
 
 # 新建标签
