doc: code help and go to the definite line

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -32,3 +32,5 @@ command + shift + n
 调出命令模式，输入 `code` 选择 `Shell Command: Install 'code' command in PATH` 注册 code 命令到环境变量（ Insiders 版本对应 `code-insiders`）。
 
 然后就可以在终端用 `code PATH` 命令来打开 VSC 了，例如在终端当前路径下打开 VSC: `code .`。
+
+`code -h` 可以查看帮助，像 `code -g <file>:<line>` 这样直接打开文件跳转到指定行之类的用法还是很实用的。
