doc: cursor location

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -25,6 +25,17 @@ command + n
 # 新开窗口
 command + shift + n
 
+## 光标操作⬇️
+
+# 单词光标移动
+alt + 左右
+
+# 光标移动到行首
+ctrl + 左
+
+# 光标移动到行尾
+ctrl + 右
+
 ```
 
 #### 在终端里快速打开 VSC
