doc: cursor points the first or last place

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -28,13 +28,19 @@ command + shift + n
 ## 光标操作⬇️
 
 # 光标跨单词移动
-option + 左右
+option + left/right
 
 # 光标移动到行首
-command + 左
+command + left
 
 # 光标移动到行尾
-command + 右
+command + right
+
+# 光标移动到文本起始位置
+command + up / command + home
+
+# 光标移动到文本末尾位置
+command + down / command + end
 
 ```
 
