doc: home and end

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -31,10 +31,10 @@ command + shift + n
 option + left/right
 
 # 光标移动到行首
-command + left
+command + left / home
 
 # 光标移动到行尾
-command + right
+command + right / end
 
 # 光标移动到文本起始位置
 command + up / command + home
