--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -42,6 +42,10 @@ command + up / command + home
 # 光标移动到文本末尾位置
 command + down / command + end
 
+## 标签页⬇️
+
+# 标签左右切换
+command + option + left/right
 ```
 
 #### 在终端里快速打开 VSC
