doc: line insert

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -48,6 +48,12 @@ command + up / command + home
 # 光标移动到文本末尾位置
 command + down / command + end
 
+# 当前行的下方插入一行，并移动光标到起始位置
+command + enter
+
+# 当前行的上方插入一行，并移动光标到起始位置
+command + shift + enter
+
 ```
 
 #### 在终端里快速打开 VSC
