doc: multiline cursors

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -54,6 +54,9 @@ command + enter
 # 当前行的上方插入一行，并移动光标到起始位置
 command + shift + enter
 
+# 多行光标
+command + option + up/down
+
 ```
 
 #### 在终端里快速打开 VSC
