--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -57,6 +57,11 @@ command + shift + enter
 # 多行光标
 command + option + up/down
 
+## 内容操作⬇️
+
+# 复制光标当前所在行/当前选中内容
+option + shift + up/down
+
 ```
 
 #### 在终端里快速打开 VSC
