doc: choose words

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -62,6 +62,9 @@ command + option + up/down
 # 复制光标当前所在行/当前选中内容
 option + shift + up/down
 
+# 跨单词选中
+option + shift + left/right
+
 ```
 
 #### 在终端里快速打开 VSC
