doc: update desc

--- a/Visual Studio Code/快捷操作备忘.md
+++ b/Visual Studio Code/快捷操作备忘.md
@@ -62,7 +62,7 @@ command + option + up/down
 # 选中内容
 shift + up/down/left/right
 
-# 复制光标当前所在行/当前选中内容
+# 快速粘贴光标当前所在行/当前选中内容到上一行／下一行
 option + shift + up/down
 
 # 跨单词选中
