doc: git checkout for reset

--- a/Git/日常使用-回退与撤销.md
+++ b/Git/日常使用-回退与撤销.md
@@ -3,6 +3,8 @@
 ```bash
 # 撤回所有已经添加到暂存取的修改
 git reset HEAD
+# 或者这样
+git checkout .
 # 撤回已经添加到暂存区某文件，这个命令在添加暂存区后 git status 就有提示
 git reset HEAD <file>
 
