doc: revert HEAD

--- a/Git/日常使用-回退与撤销.md
+++ b/Git/日常使用-回退与撤销.md
@@ -22,4 +22,7 @@ git reset --soft HEAD^
 
 # 硬撤回提交，删除工作区的所有修改，撤回暂存区的所有修改，相当于完全回到之前提交的状态
 git reset --hard HEAD^
+
+# 回退到上一次提交，但生成一条新的提交记录
+git revert HEAD
 ```
