doc: <Git> checkout the last branch

--- a/Git/日常使用-分支操作.md
+++ b/Git/日常使用-分支操作.md
@@ -7,6 +7,9 @@ git branch <branch-name>
 # 切换到指定分支
 git checkout <branch-name>
 
+# 切换到上一个分之
+git checkout -
+
 # 创建并切换到该分支
 git checkout -b <branch-name>
 
