--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -2,32 +2,29 @@
 
 主要是新建仓库，添加文件，提交变更，关联远程仓，获取代码，推送代码这些基本操作
 
+### 本地仓库
+
 ```bash
 # 本地初始化一个 Git 仓库
 git init
 
 # 查看本地仓库状态
 git status
-
 # 简短模式查看状态
 git status -s
 git status --short
 
 # 列出所有 tracked 的文件
 git ls-files -t
-
 # 列出所有 untracked 的文件
 git ls-files --others
-
 # 列出所有忽略的文件
 git ls-files --others -i --exclude-standard
 
 # 展示工作区和暂存区的差异 (add 操作之前))
 git diff
-
 # 展示暂存区和最近版本的差异 (add 操作之后 commit 之前)
 git diff --cached
-
 # 展示工作区+暂存区两者和最近版本的差异 (只要跟踪的文件有变化就会展示不同))
 git diff HEAD
 
@@ -35,30 +32,29 @@ git diff HEAD
 # 这个 file 可以是一个文件的完整路径，也可以是某个目录的路径，如果是目录，则添加目录下的所有文件
 git add <file>
 git add <file> <file>
-
 # 添加所有工作区的文件修改记录到暂存区
 git add .
+
+# 放弃工作区指定文件的修改
+# 相当于从本地版本库还原文件到工作区
+git checkout <file-name/path>
+# 放弃工作区全部文件修改
+git checkout .
 
 # 将当前暂存区的修改提交到本地仓库
 git commit
 git commit -m '提交说明'
-
 # 如果只有单个文件可以合并操作
 git commit -a -m '提交说明'
-
 # 修改上一次提交的 message
 # 通常用在修改了本地提交但未 push 到远程仓时，如果已经 push, 就要考虑是否能够重写 commit message 了
 git commit --amend
 git commit --amend -m 'message'
-# 如果可以重写，且本地仓库与远程仓库保持一致，那么可以强制 push 重写远程仓的历史
-git push -f
+```
 
-# 放弃工作区指定文件的修改
-git checkout <file-name/path>
+### 远程仓库
 
-# 放弃工作区全部文件修改
-git checkout .
-
+```bash
 # 查看当前关联远程仓库信息
 git remote -v
 
@@ -68,23 +64,40 @@ git remote add <仓库名，一般命名为origin> <仓库地址，http或者ssh
 # 克隆远程仓库
 # clone 不止针对远程仓库，也可以将本地的一个 Git 版本库克隆到另一个路径下，其实就是说 remote 不一定是服务器上的版本库，也可以是自己本机上的
 git clone <仓库地址，http或者ssh>
-
 # 克隆远程仓库到指定目录
 git clone <url> <directory>
 
 # 本地修改推送到远程仓库
 # push 时如果省略仓库名，则默认 origin
 git push <远程仓库名，例如origin> <远程分支名，例如master>
-
 # 本地推送到远程时进行分支关联（首次 push 时推荐使用）
 git push -u <repo> <branch>
+# 如果可以重写，且本地仓库与远程仓库保持一致，那么可以强制 push 重写远程仓的历史
+git push -f
 
 # 拉取远程仓库代码
 # fetch 时省略仓库，则默认 origin，通常都会省略
-# 如果 fork 了仓库，又想保持源仓库的代码更新，就可以 fetch 原仓库的地址，然后 git merge FETCH_HEAD，fetch 下来的内容对象默认保存在 .git/FETCH_HEAD，可以通过 git fetch -a 修改这个指针
+# 如果 fork 了仓库，又想保持源仓库的代码更新，就可以添加原仓库到 remote 然后 fetch，然后 git merge FETCH_HEAD，fetch 下来的内容对象默认保存在 .git/FETCH_HEAD，可以通过 git fetch -a 修改这个指针
 git fetch <repository>
+
+# 如果删除了远程分支，而在另一台机器上没有同步信息可以执行
+git fetch -p
 
 # 拉取并自动合并，相当于 git fetch && git merge
 # pull 时省略仓库，则默认 origin，通常都会省略
 git pull <repository>
 ```
+
+### 多 remote 维护
+
+如果是基于 fork 的工作流，那多半自己本地的代码库多半会有多个远程仓库。这里维护主要是尽量保持自己在使用 `git branch -a` 时看到的列表干净整洁，删掉不需要的那些远程 track 分支。
+
+下面是一些维护建议：
+
+- 关联的 remote 通过 `git remote add` 添加，命名尽可能简洁，因为实际情况这个未必常用，不容易记住，用到的时候往往需要查看一下
+
+- 无关是否多 remote，使用 fetch 时最好都带上 `-p` 参数，删掉已经不存在的 track 分支
+
+- 可以使用 `git branch -d/-d -r` 删除本地的远程分支
+
+- 当需要批量删除某个 remote 下的所有 track 分支时，可以使用命令串联 `git branch -r | grep <remote-name> | xargs git branch -D -r`
