doc<git>: tracking branch for multi-remote tips

--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -98,6 +98,10 @@ git pull <repository>
 
 - 无关是否多 remote，使用 fetch 时最好都带上 `-p` 参数，删掉已经不存在的 track 分支
 
+- 如果多个 remote 下面都有同名的分支，从 remote checkout 时会发生冲突，需要手动指定 track `git checkout --track remote/branch`
+
+- 修改本地某个分支的 tracking branch 使用 `git branch --set-upstream-to=remote/branch <branch-name>`
+
 - 可以使用 `git branch -d/-d -r` 删除本地的远程分支
 
 - 当需要批量删除某个 remote 下的所有 track 分支时，可以使用命令串联 `git branch -r | grep <remote-name> | xargs git branch -D -r`
