--- a/CSS/单屏自适应撑开剩余高度布局.md
+++ b/CSS/单屏自适应撑开剩余高度布局.md
@@ -1,8 +1,8 @@
 # 单屏自适应撑开剩余高度布局
 
-不管是PC端还是移动端，在开发中都会遇到类似这样的需求，比如头部高度固定，剩余部分自适应撑开到一屏并且不应该出现滚动条；或者一屏内上下头尾固定，中间自适应撑开高度
+不管是 PC 端还是移动端，在开发中都会遇到类似这样的需求，比如头部高度固定，剩余部分自适应撑开到一屏并且不应该出现滚动条；或者一屏内上下头尾固定，中间自适应撑开高度
 
-其实主要是固定内容到一屏以内，但是剩余部分的高度却不能写死。如果用100%高度加上margin，则整体高度就会超出一屏
+其实主要是固定内容到一屏以内，但是剩余部分的高度却不能写死。如果用 100% 高度加上 margin，则整体高度就会超出一屏
 
 可以用绝对定位来实现。
 
@@ -13,14 +13,14 @@
 
 ```css
 .header {
-    height: 100px;
+	height: 100px;
 }
 .content {
-    position: absolute;
-    top: 100px;
-    bottom: 0;
-    width: 100%;
+	position: absolute;
+	top: 100px;
+	bottom: 0;
+	width: 100%;
 }
 ```
 
-同时写上top和bottom的值，元素的高度就会在两者之间计算出来。知道了这个原理，就可以在此基础上扩展其他布局了
+同时写上 top 和 bottom 的值，元素的高度就会在两者之间计算出来。知道了这个原理，就可以在此基础上扩展其他布局了
