doc: <git> multiple accounts for github

--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -61,6 +61,9 @@ git remote -v
 # 关联指定远程仓库
 git remote add <仓库名，一般命名为origin> <仓库地址，http或者ssh>
 
+# 当某个远程仓库地址变更时更新地址
+git remote set-url <repo> <url>
+
 # 克隆远程仓库
 # clone 不止针对远程仓库，也可以将本地的一个 Git 版本库克隆到另一个路径下，其实就是说 remote 不一定是服务器上的版本库，也可以是自己本机上的
 git clone <仓库地址，http或者ssh>
