doc<git>: git commit date

--- a/Git/日常使用-本地和远程仓库基本操作.md
+++ b/Git/日常使用-本地和远程仓库基本操作.md
@@ -50,6 +50,9 @@ git commit -a -m '提交说明'
 # 通常用在修改了本地提交但未 push 到远程仓时，如果已经 push, 就要考虑是否能够重写 commit message 了
 git commit --amend
 git commit --amend -m 'message'
+
+# 调整 commit 日期
+git commit --date='2 days ago' -m 'message'
 ```
 
 ### 远程仓库
