--- a/Git/日常使用-分支操作.md
+++ b/Git/日常使用-分支操作.md
@@ -51,5 +51,6 @@ git branch -d/-D -r <remote-name/branch-name>
 git branch -m <new-branch-name>
 
 # 关联远程分支
+git branch --set-upstream-to=<remote>/<branch>
 git branch -u <remote>/<branch>
 ```
