<git> reset first commit to empty master

--- a/Git/日常使用-回退与撤销.md
+++ b/Git/日常使用-回退与撤销.md
@@ -25,4 +25,13 @@ git reset --hard HEAD^
 
 # 回退到上一次提交，但生成一条新的提交记录
 git revert HEAD
+
+# 在创建了一个空仓库，然后进行一次提交后，这时想通过 reset 回撤发现并不能生效
+# 大概因为当下是第一个 commit，没有之前可供回退的点，可以通过以下方法解决
+# 先把当前的内容 checkout 到一个临时分支
+git checkout -b temp
+# 然后删掉 master
+git branch -D master
+# 然后检出一个新的 master，会发现这个 master 没有任何提交历史，而之前第一个 commit 变更的文件处在暂存状态，这时可以再次调整然后 commit
+git checkout --orphan master
 ```
