doc: update git

--- a/Git/日常使用-回退与撤销.md
+++ b/Git/日常使用-回退与撤销.md
@@ -7,6 +7,10 @@ git reset HEAD
 git checkout .
 # 撤回已经添加到暂存区某文件，这个命令在添加暂存区后 git status 就有提示
 git reset HEAD <file>
+# 对于新添加的文件，或者初次 add 时，可以使用以下命令
+git reset .
+# 或者本质上直接删除 index
+rm .git/index
 
 # 撤回提交，保留工作区的所有修改，撤回暂存区的所有修改
 git reset HEAD^
